force-app/main/default/objects/Identity_Information__c/Identity_Information__c.object-meta.xml
<CustomObject>
    <description>Object to store clients&apos; identity information</description>
    <label>Identity Information</label>
    <nameField>
        <label>Identity Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Identity Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>