force-app/main/default/objects/Identity_Information__c/fields/Search_Count__c.field-meta.xml
<CustomField>
    <fullName>Search_Count__c</fullName>
    <label>Search Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>